# log4cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md  RELEASE_NOTES.md  build-deb.sh  build-rpm.sh  code-analysis.sh  code-format.py  code-lint.sh  cross-build.patch  demo.cpp  liblog4cpp.spec  log4cpp.json  log4cpp.yml  meson.build  meson.options  syslog.patch
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml
cmake/: CPackConfig.cmake  log4cppConfig.cmake.in
cross/: aarch64-linux-gnu.cmake  aarch64-linux-gnu.ini  arm-linux-gnueabihf.cmake  arm-linux-gnueabihf.ini  mips-linux-gnu.cmake  mips-linux-gnu.ini  mips64-linux-gnuabi64.cmake  mips64-linux-gnuabi64.ini
debian/: changelog  control  liblog4cpp-dev.install  liblog4cpp.install  liblog4cpp.shlibs  rules
demo/: CMakeLists.txt  demo.cpp  demo.json  log4cpp.json  meson.build
docs/: DESIGN.md
include/log4cpp/: log4cpp.hpp  logger.hpp
pkgconfig/: log4cpp.pc.in
src/: CMakeLists.txt  log4cpp.cpp  log4cpp.hpp  meson.build  utils.cpp  utils.hpp
src/demo/: CMakeLists.txt  demo.cpp
src/include/: log4cpp.hpp
src/include/appender/: console_appender.hpp  file_appender.hpp  log_appender.hpp  socket_appender.hpp  tcp_appender.hpp  udp_appender.hpp
src/include/common/: json.hpp  log_lock.hpp  log_net.hpp  log_utils.hpp
src/include/config/: appender.hpp  log4cpp.hpp  logger.hpp
src/include/exception/: config_exception.hpp  invalid_config_exception.hpp
src/include/logger/: core_logger.hpp  real_logger.hpp
src/include/pattern/: log_pattern.hpp
src/lib/appender/: console_appender.cpp  file_appender.cpp  socket_appender.cpp  tcp_appender.cpp  udp_appender.cpp
src/lib/common/: common.cpp  json.cpp  log_net.cpp  log_utils.cpp
src/lib/config/: appender.cpp  log4cpp.cpp  log4cpp_cfg.cpp  logger.cpp
src/lib/logger/: core_logger.cpp  logger_proxy.cpp  real_logger.cpp
src/lib/manager/: logger_manager.cpp
src/lib/pattern/: log_pattern.cpp
src/main/: CMakeLists.txt  LogConfiger.cpp  LogConfiger.h  LogLock.h  console_appender.cpp  console_appender.h  console_output.cpp  console_output.h  file_appender.cpp  file_appender.h  file_output.cpp  file_output.h  layout_manager.cpp  layout_pattern.cpp  layout_pattern.h  log4cpp.cpp  log4cpp.hpp  log4cpp_config.cpp  log4cpp_config.h  log_appender.h  log_lock.h  log_net.cpp  log_net.h  log_output.cpp  log_output.h  log_pattern.cpp  log_pattern.h  log_utils.cpp  log_utils.h  logger_builder.cpp  logger_builder.h  logger_manager.cpp  logger_pattern.cpp  logger_pattern.h  pattern.cpp  pattern.h  tcp_appender.cpp  tcp_appender.h  tcp_output.cpp  tcp_output.h  (+4 more)
src/test/: CMakeLists.txt  console_appender_stderr.json  console_appender_stdout.json  console_appender_test.cpp  file_appender_test.cpp  file_appender_test.json  layout_pattern_test.cpp  load_config_test.cpp  log4cpp-tcp_udp-test.json  log4cpp-test-1.json  log4cpp-test-2.json  log4cpp.json  log4cpp_config_1.json  log4cpp_config_2.json  log4cpp_test.h  logger_pattern_test.cpp  mainTest.cpp  main_test.cpp  net_comm.h  serialize_test.cpp  tcp_appender_test.cpp  tcp_udp_appender_test.json  test-log4cpp-1.json  test-log4cpp-2.json  udp_appender_test.cpp
test/: CMakeLists.txt  meson.build
test/app/: config_hot_reload_test.cpp  console_appender_test.cpp  file_appender_test.cpp  load_config_test.cpp  log_pattern_test.cpp  log_truncate_test.cpp  logger_pattern_test.cpp  serialize_test.cpp  socket_appender_test.cpp  tcp_appender_test.cpp  udp_appender_test.cpp
test/config/: config_hot_reload_test_v1.json  config_hot_reload_test_v2.json  console_appender_stderr.json  console_appender_stdout.json  file_appender_test.json  log4cpp.json  log4cpp_config_1.json  log4cpp_config_2.json  serialize_test.json  tcp_socket_appender_test.json  tcp_udp_appender_test.json  test_console_stderr.json  test_console_stdout.json  test_file_appender.json  test_tcp_socket.json  test_udp_socket.json  udp_socket_appender_test.json
test/include/: log4cpp_test.h
