option('build_demo', type: 'boolean', value: false, description: 'Build demo application')
option('enable_tests', type: 'boolean', value: false, description: 'Enable log4cpp unit tests')
option('enable_coverage', type: 'boolean', value: false, description: 'Enable log4cpp code coverage (GNU only)')
